--- a/3-chunking.ipynb
+++ b/3-chunking.ipynb
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[90m[\u001b[0m2025-06-12T16:49:53Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
+      "\u001b[90m[\u001b[0m2025-06-15T10:02:00Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
      ]
     },
     {
@@ -128,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[90m[\u001b[0m2025-06-12T16:49:53Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
+      "\u001b[90m[\u001b[0m2025-06-15T10:02:00Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
      ]
     }
    ],
@@ -248,16 +248,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ll/qhsvkwd97tsbm3310qw2zl2w0000gn/T/ipykernel_47233/2963619201.py:6: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
+      "/var/folders/ll/qhsvkwd97tsbm3310qw2zl2w0000gn/T/ipykernel_8836/3270080620.py:4: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
       "  embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table not existent\n"
      ]
     }
    ],
    "source": [
     "from langchain.vectorstores import LanceDB\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
-    "from openai import RateLimitError\n",
-    "from tenacity import retry, retry_if_exception_type, wait_random, stop_after_attempt\n",
     "\n",
     "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n",
     "\n",
@@ -270,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "9d38c9f2",
    "metadata": {},
    "outputs": [],
@@ -286,12 +291,12 @@
     "    if meta.get(\"outdated_by_chunk_ids\", None) is None:\n",
     "        meta[\"outdated_by_chunk_ids\"] = []\n",
     "\n",
-    "_ = vector_store.add_texts(texts=texts, metadatas=metadatas, ids=ids)"
+    "# _ = vector_store.add_texts(texts=texts, metadatas=metadatas, ids=ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "5e490932",
    "metadata": {},
    "outputs": [
@@ -299,61 +304,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3711\n",
-      "                                                 vector    id  \\\n",
-      "0     [0.016151262, -0.020787708, 0.08296303, 0.0547...     0   \n",
-      "1     [0.052668586, -0.015086556, 0.0750361, 0.04665...     1   \n",
-      "2     [0.006328056, -0.011896494, 0.08166206, 0.0255...     2   \n",
-      "3     [0.0016623309, 0.003904617, 0.07904756, 0.0230...     3   \n",
-      "4     [0.030823048, -0.013418436, 0.065149866, 0.011...     4   \n",
-      "...                                                 ...   ...   \n",
-      "3706  [0.0036337564, 0.018672522, -0.0005987541, 0.0...  3706   \n",
-      "3707  [0.019241894, 0.019872284, 0.0028724005, 0.033...  3707   \n",
-      "3708  [-0.0072249197, -0.017160986, 0.034206603, 0.0...  3708   \n",
-      "3709  [-0.0023297805, -0.008605464, -0.0049574957, 0...  3709   \n",
-      "3710  [0.00895555, -0.008428317, 0.0147402715, 0.008...  3710   \n",
-      "\n",
-      "                                                   text  \\\n",
-      "0     Acme Government Solutions is a government indu...   \n",
-      "1     In January 2021, Acme Government Solutions mad...   \n",
-      "2     in March 2021. This acquisition expanded Acme ...   \n",
-      "3     In May 2021, Acme Government Solutions forged ...   \n",
-      "4     in June 2021, Acme Government Solutions succes...   \n",
-      "...                                                 ...   \n",
-      "3706  Name of the chief judge according to the court...   \n",
-      "3707  Fine imposed on Z. Torres according to the cou...   \n",
-      "3708  Past disease history of Y. Evans according to ...   \n",
-      "3709  Initial diagnosis of H. Flores according to th...   \n",
-      "3710  Occupation of E. Chavez according to the hospi...   \n",
-      "\n",
-      "                                               metadata  \n",
-      "0     {'chunk_id': 0, 'creation_date': 2000-01-01 00...  \n",
-      "1     {'chunk_id': 1, 'creation_date': 2000-01-01 00...  \n",
-      "2     {'chunk_id': 2, 'creation_date': 2000-01-01 00...  \n",
-      "3     {'chunk_id': 3, 'creation_date': 2000-01-01 00...  \n",
-      "4     {'chunk_id': 4, 'creation_date': 2000-01-01 00...  \n",
-      "...                                                 ...  \n",
-      "3706  {'chunk_id': 3706, 'creation_date': 2015-01-01...  \n",
-      "3707  {'chunk_id': 3707, 'creation_date': 2015-01-01...  \n",
-      "3708  {'chunk_id': 3708, 'creation_date': 2015-01-01...  \n",
-      "3709  {'chunk_id': 3709, 'creation_date': 2015-01-01...  \n",
-      "3710  {'chunk_id': 3710, 'creation_date': 2015-01-01...  \n",
-      "\n",
-      "[3711 rows x 4 columns]\n"
+      "3711\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[90m[\u001b[0m2025-06-12T16:56:45Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
+      "\u001b[90m[\u001b[0m2025-06-15T10:11:50Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vector</th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>metadata</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[0.01615141, -0.020787897, 0.082916826, 0.0547...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Acme Government Solutions is a government indu...</td>\n",
+       "      <td>{'chunk_id': 0, 'creation_date': 2000-01-01 00...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              vector  id  \\\n",
+       "0  [0.01615141, -0.020787897, 0.082916826, 0.0547...   0   \n",
+       "\n",
+       "                                                text  \\\n",
+       "0  Acme Government Solutions is a government indu...   \n",
+       "\n",
+       "                                            metadata  \n",
+       "0  {'chunk_id': 0, 'creation_date': 2000-01-01 00...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "chunks_table = db[\"chunks\"].search().to_pandas()\n",
     "print(len(chunks_table))\n",
-    "print(chunks_table)"
+    "\n",
+    "chunks_table.head(1)"
    ]
   }
  ],
