--- a/4-retrieve.ipynb
+++ b/4-retrieve.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "7815f7af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leon/miniconda3/envs/ma/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import lancedb\n",
     "import importlib\n",
@@ -22,39 +31,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "b6f8e973",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n",
-    "vector_store = LanceDB(uri=LANCEDB_DIR, embedding=embeddings, table=db.open_table(TABLE_NAME_CHUNKS))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "5a9546b3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(300,)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ll/qhsvkwd97tsbm3310qw2zl2w0000gn/T/ipykernel_9054/2558687755.py:1: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
+      "  embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n"
+     ]
     }
    ],
    "source": [
-    "tuple([300])"
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n",
+    "vector_store = LanceDB(\n",
+    "    uri=LANCEDB_DIR,\n",
+    "    embedding=embeddings,\n",
+    "    table=db.open_table(TABLE_NAME_CHUNKS),\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "244b0531",
    "metadata": {},
    "outputs": [],
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "74c8deb1",
    "metadata": {},
    "outputs": [],
@@ -150,22 +151,17 @@
     "    else:\n",
     "        user_prompt = f\"Answer the given question as short as possible based on the context, which has been retrieved by similarity search from a knowledge base.\\nContext:\\n{docs_content}\\n\\nQuestion: {query}\"\n",
     "\n",
-    "    return llm.call_openai(system_prompt, user_prompt, model, response_format_pydantic=llm.LLMQAResponse)"
+    "    return llm.call_openai(\n",
+    "        system_prompt,\n",
+    "        user_prompt,\n",
+    "        model,\n",
+    "        response_format_pydantic=llm.LLMQAResponse,\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a593aec0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Evaluate retrieval"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "27c7fb4b",
    "metadata": {},
    "outputs": [
@@ -177,7 +173,7 @@
       "The occupation of Y. Nelson is not specified in the judgment.\n",
       "\n",
       "With DQ:\n",
-      "The judgment does not specify the occupation of Y. Nelson.\n"
+      "The context does not specify the occupation of Y. Nelson.\n"
      ]
     }
    ],
@@ -192,7 +188,7 @@
     "print()\n",
     "\n",
     "print(\"With DQ:\")\n",
-    "context = retrieve(query, k=10)\n",
+    "context = retrieve(query, k=5)\n",
     "context = retrieve_newer_chunks(context)\n",
     "context = sort_chunks(context)\n",
     "response = generate(query, context=context)\n",
@@ -201,7 +197,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
+   "id": "f48748e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Evaluate retrieval\n",
+    "from utils import io_helpers\n",
+    "\n",
+    "importlib.reload(io_helpers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3d5f1a84",
    "metadata": {},
    "outputs": [
@@ -212,7 +221,7 @@
       "300002\n",
       "2015-01-01 00:00:00\n",
       "3705 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "Chief judge according to the court judgment of Danbury, Pinehurst, Court | J. Smith\n",
       "Residence of F. Williams according to the court judgment of Upton, Georgetown, Court | 45, Maple Avenue, Georgetown.\n",
       "Defense lawyer for Y. Nelson according to the judgment of Glenwood, Quailwood, Court | J. Smith\n",
@@ -222,25 +231,31 @@
       "400139\n",
       "2010-01-01 00:00:00\n",
       "3544 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "In a significant case adjudicated by the 9th Judicial Circuit of Glenwood, the Glenwood, Quailwood Court delivered a judgment on June 10, 2023, against a female defendant, Y. Nelson. The court proceedings were overseen by Chief Judge Hon. H. Ruiz and Presiding Judge Hon. E. Collins, with K. Kelly serving as the court clerk.\n",
       "-----------\n",
       "400139\n",
       "2010-01-01 00:00:00\n",
       "3549 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "Y. Nelson was represented by defense lawyer L. Johnson from Parker & Associates during the trial. The judgment also outlined her right to appeal within ten days from the judgment date, which could be submitted through the Glenwood, Quailwood Court if pursued.\n",
       "-----------\n",
       "400139\n",
       "2010-01-01 00:00:00\n",
       "3547 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "The Glenwood, Quailwood Procuratorate, spearheading the prosecution, highlighted Nelson’s aggressive behavior, particularly between February 10 and February 20, 2023, when she forcibly took goods worth approximately $800 from local vendors without payment. This action was backed by evidence recovered from her residence. Her continued misconduct culminated in an incident on March 12, 2023, when she obstructed traffic and shouted obscenities near a school, creating chaos and alarm among parents and students.\n",
+      "-----------\n",
+      "400139\n",
+      "2010-01-01 00:00:00\n",
+      "3545 - outdated by []\n",
+      "- content:\n",
+      "The charges stem from a series of public disturbances caused by Y. Nelson, a chef, between January 15 and March 12, 2023. Reports first emerged on February 10, 2023, leading to an extensive investigation by local authorities. It was uncovered that Nelson engaged in persistent provocative and quarrelsome activities in downtown Quailwood's public spaces, causing severe disruptions to businesses and distress among residents. The disturbances included verbal harassment in public places and obstructing traffic\n",
       "-----------\n",
       "100139\n",
       "2005-01-01 00:00:00\n",
       "2817 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "Glenwood, Quailwood Court\n",
       "9th Judicial Circuit\n",
       "State of Glenwood\n",
@@ -271,7 +286,7 @@
       "100139\n",
       "2005-01-01 00:00:00\n",
       "2821 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "*Arrest:*  \n",
       "On March 15, 2023, the Glenwood, Quailwood Procuratorate issued an arrest warrant for Y. Nelson upon finding sufficient evidence to substantiate the charges.\n",
       "\n",
@@ -282,17 +297,36 @@
       "100139\n",
       "2005-01-01 00:00:00\n",
       "2820 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "*Detention Measures Taken:*  \n",
       "On February 20, 2023, Y. Nelson was detained under suspicion of Picking Quarrels and Provoking Trouble after a series of disturbances. Detailed assessments of the collected evidence further implicated the defendant.\n",
       "\n",
       "*Criminal Detention:*  \n",
       "On February 22, 2023, the Quailwood Police Department placed Y. Nelson under formal criminal detention following additional evidence collection and verification.\n",
       "-----------\n",
+      "100139\n",
+      "2005-01-01 00:00:00\n",
+      "2822 - outdated by []\n",
+      "- content:\n",
+      "During the period from January 15, 2023, to February 5, 2023, Y. Nelson engaged in numerous provocations and quarrels in public places such as the central market and cafes in downtown Quailwood. Witness testimonies and surveillance footage confirmed her involvement in these disruptions.\n",
+      "-----------\n",
+      "100139\n",
+      "2005-01-01 00:00:00\n",
+      "2834 - outdated by []\n",
+      "- content:\n",
+      "**Verdict Delivered:**\n",
+      "\n",
+      "June 10, 2023  \n",
+      "Glenwood, Quailwood Court  \n",
+      "\n",
+      "*Chief Judge:* Hon. H. Ruiz  \n",
+      "*Presiding Judge:* Hon. E. Collins  \n",
+      "*Court Clerk:* K. Kelly\n",
+      "-----------\n",
       "139\n",
       "2000-01-01 00:00:00\n",
       "2108 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "Glenwood, Quailwood Court\n",
       "9th Judicial Circuit\n",
       "State of Glenwood\n",
@@ -323,7 +357,7 @@
       "139\n",
       "2000-01-01 00:00:00\n",
       "2112 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "*Arrest:*  \n",
       "On March 15, 2023, the Glenwood, Quailwood Procuratorate issued an arrest warrant for Y. Nelson upon finding sufficient evidence to substantiate the charges.\n",
       "\n",
@@ -334,14 +368,33 @@
       "139\n",
       "2000-01-01 00:00:00\n",
       "2111 - outdated by []\n",
-      "-----------\n",
+      "- content:\n",
       "*Detention Measures Taken:*  \n",
       "On February 20, 2023, Y. Nelson was detained under suspicion of Picking Quarrels and Provoking Trouble after a series of disturbances. Detailed assessments of the collected evidence further implicated the defendant.\n",
       "\n",
       "*Criminal Detention:*  \n",
       "On February 22, 2023, the Quailwood Police Department placed Y. Nelson under formal criminal detention following additional evidence collection and verification.\n",
       "-----------\n",
-      "The judgment does not specify the occupation of Y. Nelson.\n"
+      "139\n",
+      "2000-01-01 00:00:00\n",
+      "2113 - outdated by []\n",
+      "- content:\n",
+      "During the period from January 15, 2023, to February 5, 2023, Y. Nelson engaged in numerous provocations and quarrels in public places such as the central market and cafes in downtown Quailwood. Witness testimonies and surveillance footage confirmed her involvement in these disruptions.\n",
+      "-----------\n",
+      "139\n",
+      "2000-01-01 00:00:00\n",
+      "2125 - outdated by []\n",
+      "- content:\n",
+      "**Verdict Delivered:**\n",
+      "\n",
+      "June 10, 2023  \n",
+      "Glenwood, Quailwood Court  \n",
+      "\n",
+      "*Chief Judge:* Hon. H. Ruiz  \n",
+      "*Presiding Judge:* Hon. E. Collins  \n",
+      "*Court Clerk:* K. Kelly\n",
+      "-----------\n",
+      "Chef\n"
      ]
     }
    ],
@@ -350,7 +403,7 @@
     "    print(c.metadata[\"doc_id\"])\n",
     "    print(c.metadata[\"creation_date\"])\n",
     "    print(f\"{c.metadata[\"chunk_id\"]} - outdated by {c.metadata[\"outdated_by_chunk_ids\"]}\")\n",
-    "    print(\"-----------\")\n",
+    "    print(\"- content:\")\n",
     "    print(c.page_content)\n",
     "    print(\"-----------\")\n",
     "\n",
