--- a/2-comparison_by_llm.ipynb
+++ b/2-comparison_by_llm.ipynb
@@ -5,16 +5,19 @@
    "id": "39eaac34",
    "metadata": {},
    "source": [
-    "## Compare\n"
+    "## Boolean Comparison\n",
+    "\n",
+    "(Documents contain conflicts or not)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1ec48a0f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### comparison functions\n",
     "import importlib\n",
     "import csv\n",
     "import os\n",
@@ -118,17 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "id": "c1982934",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- 100134 & 134 -- processed before\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -159,60 +155,39 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>gpt-4.1</td>\n",
-       "      <td>0.986111</td>\n",
-       "      <td>144.0</td>\n",
+       "      <td>0.955556</td>\n",
+       "      <td>45.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>gpt-4o</td>\n",
-       "      <td>0.947674</td>\n",
-       "      <td>172.0</td>\n",
+       "      <td>0.955556</td>\n",
+       "      <td>45.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>gpt-4.1-mini</td>\n",
-       "      <td>0.936047</td>\n",
-       "      <td>172.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>gemini-2.5-flash-preview-05-20</td>\n",
-       "      <td>0.843023</td>\n",
-       "      <td>172.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>gpt-4.1-nano</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>39.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>gpt-4o-mini</td>\n",
-       "      <td>0.633333</td>\n",
-       "      <td>60.0</td>\n",
+       "      <td>0.933333</td>\n",
+       "      <td>45.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            model  accuracy  count\n",
-       "0                         gpt-4.1  0.986111  144.0\n",
-       "1                          gpt-4o  0.947674  172.0\n",
-       "2                    gpt-4.1-mini  0.936047  172.0\n",
-       "3  gemini-2.5-flash-preview-05-20  0.843023  172.0\n",
-       "4                    gpt-4.1-nano  0.666667   39.0\n",
-       "5                     gpt-4o-mini  0.633333   60.0"
+       "          model  accuracy  count\n",
+       "0       gpt-4.1  0.955556   45.0\n",
+       "1        gpt-4o  0.955556   45.0\n",
+       "2  gpt-4.1-mini  0.933333   45.0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### evaluate models\n",
+    "### evaluate different models\n",
     "from utils import evaluation\n",
     "\n",
     "importlib.reload(evaluation)\n",
@@ -223,12 +198,14 @@
     "documents = io_helpers.get_documents(read_relations=True)\n",
     "prompts = io_helpers.get_prompt(name=\"comparison/check_for_contradictions\")\n",
     "\n",
-    "# DOC_IDS_TO_CHECK = [300001, 100134, 134, 400192, 78]\n",
+    "# DOC_IDS_TO_CHECK = [300002, 100134, 134, 400192]\n",
+    "DOC_IDS_TO_CHECK = []\n",
     "\n",
-    "model = \"gpt-4.1\"\n",
+    "model = \"gpt-4o\"\n",
     "\n",
-    "for id1, id2, gt_result in pairs_generator(100134, documents):\n",
-    "    compare_with_llm(id1, id2, gt_result, model=model, documents=documents, prompts=prompts, print_results=False)\n",
+    "for doc_id in DOC_IDS_TO_CHECK:\n",
+    "    for id1, id2, gt_result in pairs_generator(doc_id, documents):\n",
+    "        compare_with_llm(id1, id2, gt_result, model=model, documents=documents, prompts=prompts, print_results=True)\n",
     "\n",
     "evaluation.evaluate_llm_comparison(documents, FILEPATH)"
    ]
@@ -256,6 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Define functions\n",
     "import importlib\n",
     "import csv\n",
     "import os\n",
@@ -330,170 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "41fe9754",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>doc_id</th>\n",
-       "      <th>domain</th>\n",
-       "      <th>content</th>\n",
-       "      <th>original_doc_ids</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>Acme Government Solutions is a government indu...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>41</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>Entertainment Enterprises Inc. is an entertain...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>42</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>Advanced Manufacturing Solutions Inc., establi...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>43</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>EcoGuard Solutions, established on April 15, 2...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>44</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>Green Fields Agriculture Ltd., established on ...</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>400116</td>\n",
-       "      <td>Law</td>\n",
-       "      <td>In a significant legal proceeding at the Cedar...</td>\n",
-       "      <td>[116]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>400059</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>Retail Emporium, a well-established retail gia...</td>\n",
-       "      <td>[59]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>300001</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>Changes that occurred in senior management of ...</td>\n",
-       "      <td>[46, 47, 52, 59, 66, 71, 72, 77, 78, 79]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>300002</td>\n",
-       "      <td>Law</td>\n",
-       "      <td>Chief judge according to the court judgment of...</td>\n",
-       "      <td>[134, 136, 139, 112, 114, 115, 119, 123, 125, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>300003</td>\n",
-       "      <td>Medical</td>\n",
-       "      <td>Past disease history of Y. Evans according to ...</td>\n",
-       "      <td>[179, 181, 198, 199, 208, 209, 207, 205, 212, ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>171 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    doc_id   domain                                            content  \\\n",
-       "0       40  Finance  Acme Government Solutions is a government indu...   \n",
-       "1       41  Finance  Entertainment Enterprises Inc. is an entertain...   \n",
-       "2       42  Finance  Advanced Manufacturing Solutions Inc., establi...   \n",
-       "3       43  Finance  EcoGuard Solutions, established on April 15, 2...   \n",
-       "4       44  Finance  Green Fields Agriculture Ltd., established on ...   \n",
-       "..     ...      ...                                                ...   \n",
-       "28  400116      Law  In a significant legal proceeding at the Cedar...   \n",
-       "29  400059  Finance  Retail Emporium, a well-established retail gia...   \n",
-       "0   300001  Finance  Changes that occurred in senior management of ...   \n",
-       "1   300002      Law  Chief judge according to the court judgment of...   \n",
-       "2   300003  Medical  Past disease history of Y. Evans according to ...   \n",
-       "\n",
-       "                                     original_doc_ids  \n",
-       "0                                                  []  \n",
-       "1                                                  []  \n",
-       "2                                                  []  \n",
-       "3                                                  []  \n",
-       "4                                                  []  \n",
-       "..                                                ...  \n",
-       "28                                              [116]  \n",
-       "29                                               [59]  \n",
-       "0            [46, 47, 52, 59, 66, 71, 72, 77, 78, 79]  \n",
-       "1   [134, 136, 139, 112, 114, 115, 119, 123, 125, ...  \n",
-       "2   [179, 181, 198, 199, 208, 209, 207, 205, 212, ...  \n",
-       "\n",
-       "[171 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "documents = io_helpers.get_documents()\n",
-    "filtered_docs = documents[documents[\"original_doc_ids\"].apply(func=(lambda x: True if len(x) > 0 else False))]\n",
-    "\n",
-    "filtered_docs\n",
-    "documents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "44ae0d14",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Define doc IDs to compare\n",
     "docs_to_compare = {\n",
     "    \"with_conflicts\": {\n",
     "        \"single\": [(134, 100134), (46, 100046), (179, 100179)],\n",
@@ -510,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "c58ea81f",
    "metadata": {},
    "outputs": [
@@ -534,6 +354,7 @@
     }
    ],
    "source": [
+    "### Execute comparison\n",
     "importlib.reload(llm)\n",
     "\n",
     "documents = io_helpers.get_documents(read_relations=True)\n",
@@ -573,19 +394,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "9b05b3bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/leon/miniconda3/envs/ma/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import importlib\n",
     "import csv\n",
@@ -680,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "391eb0af",
    "metadata": {},
    "outputs": [
@@ -690,13 +502,13 @@
        "[(100046, 46), (100046, 300002), (100071, 71), (100071, 300002), (100208, 208)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### get all documents pairs that really contain conflicts\n",
+    "### get all documents pairs that actually contain conflicts\n",
     "\n",
     "documents = io_helpers.get_documents()\n",
     "pairs = []\n",
@@ -893,108 +705,6 @@
     "        filepath_processed_before=\"utils/llm_tracking/_conflicts_evaluated.csv\",\n",
     "        filepath_results=\"data/additional_data/docs/_conflicts.csv\",\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c5f5fcc4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>gpt-4.1</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>144.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>gpt-4.1-mini</td>\n",
-       "      <td>0.831395</td>\n",
-       "      <td>172.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>gpt-4o</td>\n",
-       "      <td>0.819767</td>\n",
-       "      <td>172.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>gemini-2.5-flash-preview-05-20</td>\n",
-       "      <td>0.738372</td>\n",
-       "      <td>172.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>gpt-4.1-nano</td>\n",
-       "      <td>0.641026</td>\n",
-       "      <td>39.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>gpt-4o-mini</td>\n",
-       "      <td>0.300000</td>\n",
-       "      <td>60.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            model  accuracy  count\n",
-       "0                         gpt-4.1  0.833333  144.0\n",
-       "1                    gpt-4.1-mini  0.831395  172.0\n",
-       "2                          gpt-4o  0.819767  172.0\n",
-       "3  gemini-2.5-flash-preview-05-20  0.738372  172.0\n",
-       "4                    gpt-4.1-nano  0.641026   39.0\n",
-       "5                     gpt-4o-mini  0.300000   60.0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "### evaluate models\n",
-    "from utils import evaluation\n",
-    "\n",
-    "importlib.reload(evaluation)\n",
-    "importlib.reload(io_helpers)\n",
-    "\n",
-    "FILEPATH = \"evaluation/_pairwise_comparison_bool.csv\"\n",
-    "\n",
-    "documents = io_helpers.get_documents()\n",
-    "\n",
-    "evaluation.evaluate_llm_comparison(documents, FILEPATH)"
    ]
   }
  ],
