--- a/2-comparison_by_llm.ipynb
+++ b/2-comparison_by_llm.ipynb
@@ -228,10 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3246ac4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leon/miniconda3/envs/ma/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "### Define functions\n",
     "import importlib\n",
@@ -313,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Define doc IDs to compare\n",
+    "### Define doc IDs to compare for testing\n",
     "docs_to_compare = {\n",
     "    \"with_conflicts\": {\n",
     "        \"single\": [(134, 100134), (46, 100046), (179, 100179)],\n",
@@ -394,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "9b05b3bf",
    "metadata": {},
    "outputs": [],
@@ -412,26 +421,6 @@
     "FIELDNAMES = [\"doc_id1\", \"doc_id2\", \"conflicting_passage_doc1\", \"conflicting_passage_doc2\", \"model\"]\n",
     "\n",
     "\n",
-    "def get_processed_before(filepath: str) -> pd.DataFrame:\n",
-    "    try:\n",
-    "        processed_pairs = pd.read_csv(\n",
-    "            filepath,\n",
-    "            usecols=[\"doc_id1\", \"doc_id2\"],\n",
-    "            dtype={\"doc_id1\": \"Int64\", \"doc_id2\": \"Int64\"},\n",
-    "        )\n",
-    "    except FileNotFoundError:\n",
-    "        os.makedirs(os.path.dirname(filepath), exist_ok=True)\n",
-    "        with open(filepath, \"x\", newline=\"\") as f:\n",
-    "            writer = csv.DictWriter(f, [\"doc_id1\", \"doc_id2\"])\n",
-    "            writer.writeheader()\n",
-    "        processed_pairs = pd.DataFrame(columns=[\"doc_id1\", \"doc_id2\"])\n",
-    "    return processed_pairs\n",
-    "\n",
-    "\n",
-    "def set_processed_before(filepath: str, data: pd.DataFrame):\n",
-    "    data.to_csv(filepath, mode=\"w\", columns=[\"doc_id1\", \"doc_id2\"], index=False)\n",
-    "\n",
-    "\n",
     "def save_result(filepath: str, data: pd.DataFrame):\n",
     "    try:\n",
     "        df = pd.read_csv(filepath)\n",
@@ -446,13 +435,19 @@
     "    documents: pd.DataFrame,\n",
     "    prompts: object,\n",
     "    filepath_results=str,\n",
-    "    filepath_processed_before=str,\n",
     "):\n",
     "    model = \"gpt-4.1\"\n",
-    "    processed_pairs: pd.DataFrame = get_processed_before(filepath_processed_before)\n",
-    "    if not processed_pairs[\n",
-    "        ((processed_pairs[\"doc_id1\"] == doc_id1) & (processed_pairs[\"doc_id2\"] == doc_id2))\n",
-    "        | ((processed_pairs[\"doc_id1\"] == doc_id2) & (processed_pairs[\"doc_id2\"] == doc_id1))\n",
+    "\n",
+    "    try:\n",
+    "        existing_data = pd.read_csv(filepath_results, dtype={\"id1\": \"Int64\", \"id2\": \"Int64\", \"conflicts_found\": bool})\n",
+    "    except FileNotFoundError:\n",
+    "        existing_data = pd.DataFrame(\n",
+    "            columns=[\"id1\", \"id2\", \"model\", \"conflicting_passage_doc1\", \"conflicting_passage_doc2\", \"conflicts_found\"]\n",
+    "        )\n",
+    "\n",
+    "    if not existing_data[\n",
+    "        ((existing_data[\"id1\"] == doc_id1) & (existing_data[\"id2\"] == doc_id2))\n",
+    "        | ((existing_data[\"id1\"] == doc_id2) & (existing_data[\"id2\"] == doc_id1))\n",
     "    ].empty:\n",
     "        print(f\"-- {doc_id1} & {doc_id2} -- processed before\")\n",
     "        return\n",
@@ -481,30 +476,23 @@
     "            \"model\": model,\n",
     "            \"conflicting_passage_doc1\": conflict.quote_from_document1,\n",
     "            \"conflicting_passage_doc2\": conflict.quote_from_document2,\n",
+    "            \"conflicts_found\": False if len(llm_response.contradictions) == 0 else True,\n",
     "        }\n",
-    "        save_result(filepath_results, pd.DataFrame([new_result]))\n",
-    "\n",
-    "    processed_pairs = pd.concat(\n",
-    "        [processed_pairs, pd.DataFrame([{\"doc_id1\": doc_id1, \"doc_id2\": doc_id2}])], ignore_index=True\n",
-    "    )\n",
-    "    set_processed_before(filepath_processed_before, processed_pairs)"
+    "        save_result(filepath_results, pd.DataFrame([new_result]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "391eb0af",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(100046, 46), (100046, 300002), (100071, 71), (100071, 300002), (100208, 208)]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
     }
    ],
    "source": [
@@ -543,149 +531,15 @@
     "\n",
     "\n",
     "documents.apply(get_conflicting_docs, axis=1)\n",
-    "pairs[:5]"
+    "print(len(pairs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "50770f66",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- 100046 & 46 -- "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 contradictions found.\n",
-      "-- 100046 & 300002 -- 1 contradictions found.\n",
-      "-- 100071 & 71 -- 1 contradictions found.\n",
-      "-- 100071 & 300002 -- 1 contradictions found.\n",
-      "-- 100208 & 208 -- No contradictions found.\n",
-      "-- 100208 & 300001 -- 1 contradictions found.\n",
-      "-- 100119 & 119 -- 1 contradictions found.\n",
-      "-- 100119 & 300003 -- 1 contradictions found.\n",
-      "-- 100123 & 123 -- 1 contradictions found.\n",
-      "-- 100123 & 300003 -- 1 contradictions found.\n",
-      "-- 100111 & 111 -- 2 contradictions found.\n",
-      "-- 100111 & 300003 -- 2 contradictions found.\n",
-      "-- 100113 & 113 -- 2 contradictions found.\n",
-      "-- 100113 & 300003 -- 1 contradictions found.\n",
-      "-- 100122 & 122 -- 1 contradictions found.\n",
-      "-- 100122 & 300003 -- 1 contradictions found.\n",
-      "-- 100124 & 124 -- 4 contradictions found.\n",
-      "-- 100124 & 300003 -- 1 contradictions found.\n",
-      "-- 100129 & 129 -- 1 contradictions found.\n",
-      "-- 100129 & 300003 -- 1 contradictions found.\n",
-      "-- 100131 & 131 -- 1 contradictions found.\n",
-      "-- 100131 & 300003 -- 1 contradictions found.\n",
-      "-- 100135 & 135 -- 1 contradictions found.\n",
-      "-- 100135 & 300003 -- 1 contradictions found.\n",
-      "-- 100138 & 138 -- 1 contradictions found.\n",
-      "-- 100138 & 300003 -- No contradictions found.\n",
-      "-- 100178 & 178 -- 8 contradictions found.\n",
-      "-- 100178 & 300001 -- 1 contradictions found.\n",
-      "-- 100182 & 182 -- 3 contradictions found.\n",
-      "-- 100182 & 300001 -- 1 contradictions found.\n",
-      "-- 100185 & 185 -- 1 contradictions found.\n",
-      "-- 100185 & 300001 -- 1 contradictions found.\n",
-      "-- 100191 & 191 -- No contradictions found.\n",
-      "-- 100191 & 300001 -- 1 contradictions found.\n",
-      "-- 100195 & 195 -- 1 contradictions found.\n",
-      "-- 100195 & 300001 -- 1 contradictions found.\n",
-      "-- 100197 & 197 -- No contradictions found.\n",
-      "-- 100197 & 300001 -- 1 contradictions found.\n",
-      "-- 100201 & 201 -- 2 contradictions found.\n",
-      "-- 100201 & 300001 -- 2 contradictions found.\n",
-      "-- 100206 & 206 -- 1 contradictions found.\n",
-      "-- 100206 & 300001 -- 1 contradictions found.\n",
-      "-- 100210 & 210 -- No contradictions found.\n",
-      "-- 100210 & 300001 -- 1 contradictions found.\n",
-      "-- 100041 & 41 -- 1 contradictions found.\n",
-      "-- 100041 & 300002 -- 1 contradictions found.\n",
-      "-- 100044 & 44 -- No contradictions found.\n",
-      "-- 100044 & 300002 -- 1 contradictions found.\n",
-      "-- 100049 & 49 -- 1 contradictions found.\n",
-      "-- 100049 & 300002 -- 1 contradictions found.\n",
-      "-- 100054 & 54 -- 1 contradictions found.\n",
-      "-- 100054 & 300002 -- 1 contradictions found.\n",
-      "-- 100055 & 55 -- 1 contradictions found.\n",
-      "-- 100055 & 300002 -- 1 contradictions found.\n",
-      "-- 100062 & 62 -- 1 contradictions found.\n",
-      "-- 100062 & 300002 -- 1 contradictions found.\n",
-      "-- 100067 & 67 -- 1 contradictions found.\n",
-      "-- 100067 & 300002 -- 1 contradictions found.\n",
-      "-- 100069 & 69 -- 1 contradictions found.\n",
-      "-- 100069 & 300002 -- 1 contradictions found.\n",
-      "-- 400128 & 128 -- processed before\n",
-      "-- 400132 & 132 -- processed before\n",
-      "-- 400133 & 133 -- processed before\n",
-      "-- 400134 & 134 -- processed before\n",
-      "-- 400136 & 136 -- processed before\n",
-      "-- 400205 & 205 -- processed before\n",
-      "-- 400139 & 139 -- processed before\n",
-      "-- 400040 & 40 -- processed before\n",
-      "-- 400042 & 42 -- processed before\n",
-      "-- 400052 & 52 -- processed before\n",
-      "-- 400053 & 53 -- processed before\n",
-      "-- 400183 & 183 -- processed before\n",
-      "-- 400188 & 188 -- processed before\n",
-      "-- 400192 & 192 -- processed before\n",
-      "-- 400065 & 65 -- processed before\n",
-      "-- 400194 & 194 -- processed before\n",
-      "-- 400198 & 198 -- processed before\n",
-      "-- 400199 & 199 -- processed before\n",
-      "-- 400074 & 74 -- processed before\n",
-      "-- 400202 & 202 -- processed before\n",
-      "-- 400204 & 204 -- processed before\n",
-      "-- 400075 & 75 -- processed before\n",
-      "-- 400078 & 78 -- processed before\n",
-      "-- 400079 & 79 -- processed before\n",
-      "-- 400207 & 207 -- processed before\n",
-      "-- 400213 & 213 -- processed before\n",
-      "-- 400214 & 214 -- processed before\n",
-      "-- 400110 & 110 -- processed before\n",
-      "-- 400116 & 116 -- processed before\n",
-      "-- 400059 & 59 -- processed before\n",
-      "-- 300002 & 41 -- 1 contradictions found.\n",
-      "-- 300002 & 44 -- 1 contradictions found.\n",
-      "-- 300002 & 46 -- 1 contradictions found.\n",
-      "-- 300002 & 49 -- 1 contradictions found.\n",
-      "-- 300002 & 54 -- 2 contradictions found.\n",
-      "-- 300002 & 55 -- 2 contradictions found.\n",
-      "-- 300002 & 62 -- 1 contradictions found.\n",
-      "-- 300002 & 67 -- 1 contradictions found.\n",
-      "-- 300002 & 69 -- 1 contradictions found.\n",
-      "-- 300002 & 71 -- 1 contradictions found.\n",
-      "-- 300003 & 111 -- 3 contradictions found.\n",
-      "-- 300003 & 113 -- 2 contradictions found.\n",
-      "-- 300003 & 119 -- 1 contradictions found.\n",
-      "-- 300003 & 122 -- 5 contradictions found.\n",
-      "-- 300003 & 123 -- 2 contradictions found.\n",
-      "-- 300003 & 124 -- 2 contradictions found.\n",
-      "-- 300003 & 129 -- 2 contradictions found.\n",
-      "-- 300003 & 131 -- 2 contradictions found.\n",
-      "-- 300003 & 135 -- 2 contradictions found.\n",
-      "-- 300003 & 138 -- 2 contradictions found.\n",
-      "-- 300001 & 178 -- 4 contradictions found.\n",
-      "-- 300001 & 182 -- 1 contradictions found.\n",
-      "-- 300001 & 185 -- 2 contradictions found.\n",
-      "-- 300001 & 191 -- 3 contradictions found.\n",
-      "-- 300001 & 195 -- 1 contradictions found.\n",
-      "-- 300001 & 197 -- 2 contradictions found.\n",
-      "-- 300001 & 201 -- 9 contradictions found.\n",
-      "-- 300001 & 206 -- 1 contradictions found.\n",
-      "-- 300001 & 208 -- 1 contradictions found.\n",
-      "-- 300001 & 210 -- 1 contradictions found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Extract and save conflicting passages\n",
     "\n",
@@ -694,7 +548,7 @@
     "documents = io_helpers.get_documents(read_relations=True)\n",
     "prompts = io_helpers.get_prompt(name=\"comparison/extract_contradictions\")\n",
     "\n",
-    "# docs_to_compare = [(134, 100134), (46, 100046), (179, 100179)]\n",
+    "docs_to_compare = [(208, 100208), (179, 100179)]\n",
     "\n",
     "for id1, id2 in pairs:\n",
     "    extract_conflicts(\n",
@@ -702,7 +556,6 @@
     "        id2,\n",
     "        prompts=prompts,\n",
     "        documents=documents,\n",
-    "        filepath_processed_before=\"utils/llm_tracking/_conflicts_evaluated.csv\",\n",
     "        filepath_results=\"data/additional_data/docs/_conflicts.csv\",\n",
     "    )"
    ]
