--- a/3-chunking.ipynb
+++ b/3-chunking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "9fc88c05",
    "metadata": {},
    "outputs": [],
@@ -17,14 +17,14 @@
     "# DB specifications\n",
     "LANCEDB_DIR = \"/Users/leon/Documents/study/MA/lancedb\"\n",
     "TABLE_NAME_DOCS = \"documents\"\n",
-    "TABLE_NAME_CHUNKS = \"chunks\"\n",
+    "TABLE_NAME_CHUNKS = \"chunks_emb-large\"\n",
     "\n",
     "db = lancedb.connect(LANCEDB_DIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "8d334564",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "a90a7d74",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[90m[\u001b[0m2025-06-15T10:02:00Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
+      "\u001b[90m[\u001b[0m2025-06-15T17:35:39Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
      ]
     },
     {
@@ -106,7 +106,7 @@
        "creation_date: [[2000-01-01 00:00:00.000000000]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "0eaf72ef",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[90m[\u001b[0m2025-06-15T10:02:00Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
+      "\u001b[90m[\u001b[0m2025-06-15T17:35:39Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
      ]
     }
    ],
@@ -143,23 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "60ed7b72",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/leon/miniconda3/envs/ma/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3711\n"
+      "3720\n"
      ]
     }
    ],
@@ -179,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "445b1760",
    "metadata": {},
    "outputs": [],
@@ -240,18 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "3ff877e8",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ll/qhsvkwd97tsbm3310qw2zl2w0000gn/T/ipykernel_8836/3270080620.py:4: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
-      "  embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -264,7 +248,7 @@
     "from langchain.vectorstores import LanceDB\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "\n",
-    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")\n",
     "\n",
     "try:\n",
     "    vector_store = LanceDB(uri=LANCEDB_DIR, embedding=embeddings, table=db.open_table(TABLE_NAME_CHUNKS))\n",
@@ -275,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "9d38c9f2",
    "metadata": {},
    "outputs": [],
@@ -291,12 +275,12 @@
     "    if meta.get(\"outdated_by_chunk_ids\", None) is None:\n",
     "        meta[\"outdated_by_chunk_ids\"] = []\n",
     "\n",
-    "# _ = vector_store.add_texts(texts=texts, metadatas=metadatas, ids=ids)"
+    "_ = vector_store.add_texts(texts=texts, metadatas=metadatas, ids=ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "5e490932",
    "metadata": {},
    "outputs": [
@@ -304,14 +288,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3711\n"
+      "3720\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[90m[\u001b[0m2025-06-15T10:11:50Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
+      "\u001b[90m[\u001b[0m2025-06-15T17:40:14Z \u001b[33mWARN \u001b[0m lance::dataset::scanner\u001b[90m]\u001b[0m nprobes is not set because nearest has not been called yet\n"
      ]
     },
     {
@@ -344,7 +328,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[0.01615141, -0.020787897, 0.082916826, 0.0547...</td>\n",
+       "      <td>[0.016151262, -0.020787708, 0.08296303, 0.0547...</td>\n",
        "      <td>0</td>\n",
        "      <td>Acme Government Solutions is a government indu...</td>\n",
        "      <td>{'chunk_id': 0, 'creation_date': 2000-01-01 00...</td>\n",
@@ -355,7 +339,7 @@
       ],
       "text/plain": [
        "                                              vector  id  \\\n",
-       "0  [0.01615141, -0.020787897, 0.082916826, 0.0547...   0   \n",
+       "0  [0.016151262, -0.020787708, 0.08296303, 0.0547...   0   \n",
        "\n",
        "                                                text  \\\n",
        "0  Acme Government Solutions is a government indu...   \n",
@@ -364,7 +348,7 @@
        "0  {'chunk_id': 0, 'creation_date': 2000-01-01 00...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
